project pictures, text alignment, project descrip

--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,11 +1,12 @@
 ---
+title: Fantasy Basketball Analyzer
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: cake.png
-alt: image-alt
+img: fantasy-basketball-project.png
+alt: NBA Paint drawing of Giannis dunking the ball
 project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+client: Personal Project
+category: Python, APIs, Pandas, Jupyter Notebooks
+description: I got tired of having to check my fantasy basketball roster, so I wanted to build a program that will automatically determine the best roster on any given night. This involves checking for player injuries, limiting the number of free agent aquisitions to the weekly league cap, and calculating the expected fantasy score. I used Basketball Reference and ESPN APIs to get player stats and availability. I implemented the expected fantasy score by taking rolling averages for a given players most recent games. I set up a cron job to pull in player stats and schedules every morning. Unfortunately the ESPN API was not able to set my roster, but this project was a very fun experience. I was exposed to different ways to visualize data, managing and interpretting large amounts of data, and interacting with APIs. 
 ---
