Changed project link to point to project on github

--- a/_posts/2014-07-14-project-1.markdown
+++ b/_posts/2014-07-14-project-1.markdown
@@ -9,4 +9,5 @@ project-date: Spring 2020
 client: Android Development Course
 category: Android Development, Java, APIs, SDKs
 description: YouQueue was a semester-long group project for my Android Development class. The app creates a common queue which multiple users can add songs to. I was responsible for integrating the Spotify API and SDK to search for songs, add songs, and play songs. I learned about using APIs, parsing data, and interacting with a database.
+link: https://github.com/SimonT321/YouQueue
 ---
