--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -9,4 +9,5 @@ project-date: April 2014
 client: Personal Project
 category: Python, APIs, Pandas, Jupyter Notebooks
 description: I got tired of having to check my fantasy basketball roster, so I wanted to build a program that will automatically determine the best roster on any given night. This involves checking for player injuries, limiting the number of free agent aquisitions to the weekly league cap, and calculating the expected fantasy score. I used Basketball Reference and ESPN APIs to get player stats and availability. I implemented the expected fantasy score by taking rolling averages for a given players most recent games. I set up a cron job to pull in player stats and schedules every morning. Unfortunately the ESPN API was not able to set my roster, but this project was a very fun experience. I was exposed to different ways to visualize data, managing and interpretting large amounts of data, and interacting with APIs. 
+link: https://github.com/SimonT321/fantasybball
 ---
